# Pneumonia-DNN

./: .editorconfig  .gitignore  LICENSE  README.md  demo.ipynb  expirements.ipynb  pyproject.toml  rick.ipynb  run_first.sh
fdnn/: package-lock.json  package.json
fdnn/src/: App.tsx  index.css
fdnn/src/components/: DatasetCard.tsx  DatasetCreate.tsx  DatasetDetails.tsx  DatasetGrid.tsx  DatasetPage.tsx  KaggleAdd.tsx  KaggleAddWizard.tsx  KaggleColumnSelection.tsx  KaggleDatasetsTable.tsx  KaggleDatasetsTableRow.tsx  KaggleMetadataSelection.tsx  KaggleRelabel.tsx  KaggleSearch.tsx  Layout.tsx  ProjectCard.tsx  ProjectCreate.tsx  ProjectCreateLabelSplit.tsx  ProjectCreateLabelSplitItem.tsx  ProjectGrid.tsx  ProjectsPage.tsx
pneumonia_dnn/: __main__.py  dataset.py  image_manipulation.py  preprocessor.py  project.py  server.py  utils.py
pneumonia_dnn/cli/: datasets.py  main.py  projects.py
pneumonia_dnn/controllers/: dataset_controller.py  project_controller.py
pneumonia_dnn/dataset_processors/: base_processor.py  coronahack_processor.py  nih_processor.py
pneumonia_dnn/models/: cnn.py  vgg16.py  vision_transformer.py  vit.py  vitb16.py
