[tool.poetry]
name = "pneumonia-dnn"
version = "0.1.0"
description = ""
authors = ["Clayton Snyder <cms8896@psu.edu>", "Rick Singh <rjs7003@psu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pneumonia_dnn"}]

[tool.poetry.scripts]
pdnn = "pneumonia_dnn.cli.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
kaggle = "^1.6.6"
pandas = "2.2.1"
pillow = "10.2.0"
tqdm = "4.66.2"
opencv-python = "4.9.0.80"
tensorflow =  "2.15.0"
scipy = "1.12.0"
einops = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
dill = "0.3.8"
isort = "5.13.2"
pylint = "^3.0.1"
setuptools = "69.2.0"
shfmt-py = "^3.4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
